--- a/GSMA.Core/GSMA.Core.csproj
+++ b/GSMA.Core/GSMA.Core.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\GSMA.DataProvider\GSMA.DataProvider.csproj" />
     <ProjectReference Include="..\GSMA.Logger\GSMA.Logger.csproj" />
     <ProjectReference Include="..\GSMA.Models\GSMA.Models.csproj" />
